# llm-mud

./: .gitignore  CLAUDE.md  README.md  character.py  digest.txt  grimm-design.json  grimm-design2.json  grimm.json  pizza.json  player.py  proposal.md  pydantic-ai-guide.md  pyproject.toml  requirements.txt  room.py  save.py  server.py  world.py  world1.json
llm_mud/: __init__.py  character.py  cli.py  client.py  command_parser.py  config.py  messages.py  persist.py  player.py  room.py  save.py  server.py  world.py
llm_mud/core/: character.py  command_parser.py  player.py  room.py  room_gen.py  world.py  world_gen.py
llm_mud/db_models/: __init__.py  auth.py  db.py  users.py
llm_mud/networking/: client.py  messages.py  server.py
mad/: __init__.py  cli.py  config.py
mad/core/: char_agent.py  char_agent_tools.py  character.py  character_action.py  command_parser.py  location.py  player.py  room.py  world.py
mad/db_models/: auth.py  db.py
mad/networking/: messages.py  server.py
web/: index.html  main.js  styles.css
