[project]
name = "llm-mud"
version = "0.1.0"
description = "LLM-powered MUD game engine and server"
authors = []
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "pydantic>=2.5.2",
    "websockets>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_mud"]
