[project]
name = "llm-mud"
version = "0.1.0"
description = "LLM-powered MUD game engine and server"
authors = []
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "pydantic>=2.5.2",
    "websockets>=15.0",
    "click>=8.1.0",
    "pydantic-ai==0.0.24",
]

[project.scripts]
llmmud = "llm_mud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_mud"]
