[project]
name = "mad"
version = "0.1.0"
description = "LLM-powered MUD game engine and server"
authors = []
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "pydantic>=2.5.2",
    "websockets>=15.0",
    "click>=8.1.0",
    "pydantic-ai==0.0.26",
    "networkx>=3.2.1",
    "aiohttp>=3.9.0",
    "aiohttp-session>=2.12.0",
    "bcrypt>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.3.0",
    "cryptography>=3.4.0",
]

[project.scripts]
mad = "mad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mad"]
